--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,7 +66,8 @@ img {
     height: 300px;
     display: inline-block;
     margin: auto;
-    overflowx: hidden;
+    overflow-x: hidden;
+    
 }
 
 .error .p {
